[gd_scene load_steps=2 format=3 uid="uid://cgew1lnr8gvgb"]

[ext_resource type="Script" uid="uid://cy7sqg1hkj0ac" path="res://scripts/OptionsMenu.gd" id="1"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -267.0
offset_top = -286.0
offset_right = 257.0
offset_bottom = 313.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "OPTIONS"
horizontal_alignment = 1

[node name="VolumeSection" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VolumeTitle" type="Label" parent="Panel/VBox/VolumeSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "VOLUME"

[node name="MasterVolume" type="HBoxContainer" parent="Panel/VBox/VolumeSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/VolumeSection/MasterVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Master Volume:"

[node name="Slider" type="HSlider" parent="Panel/VBox/VolumeSection/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
value = 80.0

[node name="ValueLabel" type="Label" parent="Panel/VBox/VolumeSection/MasterVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "80%"

[node name="MusicVolume" type="HBoxContainer" parent="Panel/VBox/VolumeSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/VolumeSection/MusicVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music Volume:"

[node name="Slider" type="HSlider" parent="Panel/VBox/VolumeSection/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
value = 70.0

[node name="ValueLabel" type="Label" parent="Panel/VBox/VolumeSection/MusicVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "70%"

[node name="SFXVolume" type="HBoxContainer" parent="Panel/VBox/VolumeSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/VolumeSection/SFXVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "SFX Volume:"

[node name="Slider" type="HSlider" parent="Panel/VBox/VolumeSection/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
value = 80.0

[node name="ValueLabel" type="Label" parent="Panel/VBox/VolumeSection/SFXVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "80%"

[node name="FeedbackVolume" type="HBoxContainer" parent="Panel/VBox/VolumeSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/VolumeSection/FeedbackVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Voice Feedback:"

[node name="Slider" type="HSlider" parent="Panel/VBox/VolumeSection/FeedbackVolume"]
layout_mode = 2
size_flags_horizontal = 3
value = 60.0

[node name="ValueLabel" type="Label" parent="Panel/VBox/VolumeSection/FeedbackVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "60%"

[node name="GraphicsSection" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GraphicsTitle" type="Label" parent="Panel/VBox/GraphicsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "GRAPHICS"

[node name="FullscreenCheck" type="CheckBox" parent="Panel/VBox/GraphicsSection"]
layout_mode = 2
text = "Fullscreen"

[node name="VsyncCheck" type="CheckBox" parent="Panel/VBox/GraphicsSection"]
layout_mode = 2
button_pressed = true
text = "VSync"

[node name="FPSLimit" type="HBoxContainer" parent="Panel/VBox/GraphicsSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/GraphicsSection/FPSLimit"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "FPS Limit:"

[node name="OptionButton" type="OptionButton" parent="Panel/VBox/GraphicsSection/FPSLimit"]
layout_mode = 2
selected = 0
item_count = 5
popup/item_0/text = "Unlimited"
popup/item_0/id = 0
popup/item_1/text = "30 FPS"
popup/item_1/id = 1
popup/item_2/text = "60 FPS"
popup/item_2/id = 2
popup/item_3/text = "120 FPS"
popup/item_3/id = 3
popup/item_4/text = "144 FPS"
popup/item_4/id = 4

[node name="GameplaySection" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GameplayTitle" type="Label" parent="Panel/VBox/GameplaySection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "GAMEPLAY"

[node name="PitchSensitivity" type="HBoxContainer" parent="Panel/VBox/GameplaySection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/GameplaySection/PitchSensitivity"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Pitch Sensitivity:"

[node name="Slider" type="HSlider" parent="Panel/VBox/GameplaySection/PitchSensitivity"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="ValueLabel" type="Label" parent="Panel/VBox/GameplaySection/PitchSensitivity"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "1.0x"

[node name="LyricOffset" type="HBoxContainer" parent="Panel/VBox/GameplaySection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/GameplaySection/LyricOffset"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Lyric Offset:"

[node name="Slider" type="HSlider" parent="Panel/VBox/GameplaySection/LyricOffset"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -2.0
max_value = 2.0
step = 0.05

[node name="ValueLabel" type="Label" parent="Panel/VBox/GameplaySection/LyricOffset"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0.00s"

[node name="AutoPauseCheck" type="CheckBox" parent="Panel/VBox/GameplaySection"]
layout_mode = 2
button_pressed = true
text = "Auto-pause when window loses focus"

[node name="ButtonSection" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="ResetButton" type="Button" parent="Panel/VBox/ButtonSection"]
layout_mode = 2
text = "Reset to Default"

[node name="ApplyButton" type="Button" parent="Panel/VBox/ButtonSection"]
layout_mode = 2
text = "Apply & Save"

[node name="CloseButton" type="Button" parent="Panel/VBox/ButtonSection"]
layout_mode = 2
text = "Close"
